# Prompt-Automata

./: README.md  add_base_dir.py  check_prompts.py  config.py  migrate_prompts.py  pyproject.toml  run.py
docs/implementationPlans/: DynamicReferenceImplementationPlan.md  GitReferenceImplementationPlan.md  Global-Token-Count-ImplementationPlan.md  LiteLLMImplementationPlan.md  MultipleFencingImplementationPlan.md  RefreshButtonImplementationPlan.md  TokenImplementationPlan.md
docs/results/: DRIP_Results.md  Global-TP_Results.md  TIP.md
migrations/: env.py
migrations/versions/: 040911525030_update_apiendpoint_schema_with_new_.py  4e8d1ea42c8a_add_fencereference_model_and_path_.py  615767d4c79d_add_is_recursive_to_alloweddirectory.py  7a5afde255a5_add_description_and_is_recursive_fields_.py  7d7281b16230_add_block_library_table.py  a1a9de0b0fbd_add_reference_system_models.py  add_api_tokens_table.py  be2d7790f4b2_add_type_field_to_apiendpoint.py  c533a43e72df_.py  da30f4e738a6_.py
src/: run.py
src/app/: __init__.py  auth.py  extensions.py
src/app/api/: __init__.py  github.py
src/app/commands/: add_allowed_directory.py  list_allowed_directories.py
src/app/handlers/: __init__.py  api_handler.py  file_handler.py  handler_factory.py  reference_handler.py  variable_handler.py
src/app/migrations/: alembic.ini  env.py
src/app/models/: __init__.py  allowed_directory.py  api_endpoint.py  api_models.py  api_token.py  base.py  block_library.py  db.py  fence.py  persistent_variable.py  prompt.py  reference_models.py  token_count.py
src/app/routes/: __init__.py  admin.py  block_library.py  fences.py  files.py  github_reference.py  llm_completion.py  llm_token_management.py  main.py  preview_routes.py  prompts.py  reference_options.py  references.py  refresh_routes.py  token_counting.py  token_status.py
src/app/services/: __init__.py  api_handler.py  api_handler_factory.py  batch_processor.py  (+17 more)
(+83 files in other folders)
